# E-commerce-Landing-Page-A-B-Test-Analysis

./: .gitignore  Makefile  README.md  abtest.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: analysis.yaml
docs/: data_dictionary.md  decision_log.md  experiment_spec.md  portfolio_pitch.md
notebooks/: abtest.ipynb
scripts/: run_analysis.py
sql/: ab_test_metrics.sql  queries.sql
src/: __init__.py  data_loader.py  database.py  statistics.py  visualizations.py
src/ab_analysis/: __init__.py
src/ab_analysis/analysis/: __init__.py  business_impact.py  metrics.py  stats_tests.py
src/ab_analysis/data/: __init__.py  clean.py  load.py  validation.py
src/ab_analysis/reporting/: plots.py  report.py
tests/: test_data_loader.py  test_pipeline.py  test_statistics.py
tests/fixtures/: ab_data_sample.csv  countries_sample.csv
